# bank-statement-analyser

./: Makefile  Readme.md  format.sh  setup.sh
src/: pyproject.toml
src/main/: app.py  balance_reconciliation.py  business_info.py  integrity.py  is_bank_statement.py  llms.py  mvp.py  transaction_extraction.py  utils.py
src/main/models/: balance_analysis.py  business_info.py  is_bank_statement.py
src/main/prompts/: balance_analysis.py  business_info.py  is_bank_statment.py  transaction_extraction.py
